--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -193,11 +193,14 @@ body h6{
 }
 
 .btn-outline-secondary{
-    color: #fff; 
-    border: 2px solid #fff; 
+    color: #000; 
+    border: 0px; 
+    background-color: #fff;
+    border-radius: 10px;
     padding: 16px 40px; 
-    font-size: 20px; 
+    font-size: 18px; 
     margin-top: 20px;
+    letter-spacing: 2px;
 }
 
 .carousel-caption{
@@ -205,8 +208,9 @@ body h6{
 }
 
 .carousel-caption .btn-outline-secondary:hover{
-    background-color: rgba(0, 0, 0.4, 0.4);
-    border: 2px solid #fff; 
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 0px; 
+    color: #000;
     animation: my-transition 2s;
 }
 
@@ -226,29 +230,18 @@ body h6{
     transition: ease-in 0.2s;
 }
 
-.carousel-caption .h5{
-    font-size: 12px;
-    color: wheat;
-    letter-spacing: 4px;
-    font-weight: 500;
-    width: 100%;
-    margin: 15px 0 0 0;
-    text-transform: uppercase;
-    display: block;
-}
-
-.carousel-caption .description{
+.description{
     font-weight: lighter;
     font-size: 40px;
 }
 
-.carousel-caption .keyword{
+.keyword{
     font-family: 'Playfair Display', serif; 
     font-weight: bold;
     font-size: 44px;
 }
 
-.carousel-caption .title-line{
+.title-line{
     width: 75px;
     height: 2px;
     display: inline-block;
@@ -292,16 +285,19 @@ body h6{
 .promotion-btn{
     padding: 20px 30px;
     text-align: center;
-    border: 2px solid black;
-    background-color: white;
+    border: 0px;
+    border-radius: 10px;
+    background-color: black;
     text-transform: uppercase;
     font-size: 15px;
-    font-weight: bold;
+    color: white;
+    letter-spacing: 1px;
 }
 
 .promotion-btn:hover{
     animation: my-transition 2s;
-    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    background-color: rgba(0, 0, 0, .8);
 }
 
 .btn--viewmore{
@@ -437,18 +433,21 @@ body h6{
 
 .about--btn{
     margin-top: 20px !important;
-    min-width: 200px;
     padding: 20px 30px;
     text-align: center;
     font-size: 15px;
-    border: 2px solid white;
+    border: 0px;
+    border-radius: 10px;
     text-transform: uppercase;
     background-color: white;
-    font-weight: bold;
+    color: black;
+    letter-spacing: 1px;
 }
 
 .about--btn:hover{
     animation: my-transition 2s;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
 }
 
 .video-back{
@@ -1002,6 +1001,10 @@ footer .copyright{
     padding: 150px 0;
 }
 
+.col-lg-3{
+    cursor: pointer;
+}
+
 .about-video-back{
     position: absolute;
     top: 0;
@@ -1208,6 +1211,23 @@ a:hover{
     height: 450px;
 }
 
+.tag{
+    position: absolute;
+    z-index: 9;
+    padding: 0px 10px;
+    border: 0px;
+    border-radius: 10px;
+    background-color: goldenrod;
+    top: 3%;
+    right: 4%;
+}
+
+.tag h5{
+    font-size: 14px;
+    letter-spacing: 1px;
+    cursor: default;
+}
+
 .title{
     position: absolute;
     z-index: 9;
@@ -1237,4 +1257,309 @@ a:hover{
 
 .row .col-lg-4 .promotion-content-img:hover .promo-btn-viewmore{
     display: block;
+}
+
+/* Trang Blogs */
+.blog{
+    position: relative;
+    height: 30vh;
+    display: flex;
+    padding: 150px 0;
+}
+.blog-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    display: inline-block;
+}
+
+.blog-img-back{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.blog-img-back img{
+    width: 100% ;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+}
+
+/* Subpage Blog */
+.author{
+    width: 100%;
+    position: relative;
+}
+
+.author img{
+    border-radius: 50%;
+    width: 110px;
+    border: 3px solid #fff;
+}
+
+.post--info{
+    font-size: 12px;
+    margin-top: 20px;
+    text-transform: uppercase;
+}
+
+.blog--ocean{
+    margin: 50px auto;
+}
+
+.post--info__detail{
+    margin: 20px auto;
+    letter-spacing: 1px;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    min-width: 35%;
+}
+
+.post--view img{
+    display: inline-block;
+    margin-left: -10px;
+    margin-top: -8px;
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+blockquote{
+    margin: 20px 0;
+    padding: 10px 0 10px 80px;
+    text-align: left;
+    display: inline-block;
+}
+
+.quote{
+    font-size: 24px;
+    font-style: italic;
+    text-align: left;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    opacity: 0.7;
+}
+
+blockquote p{
+    opacity: 0.8;
+    padding-top: 5px;
+}
+
+.like-share{
+    margin: 50px 0;
+}
+
+.like-share button{
+    margin: 0px 10px;
+    padding: 10px;
+    border: 1.5px solid goldenrod;
+    width: 120px;
+    height: 50px;
+    color: goldenrod;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 14px;
+    border-radius: 7px;
+}
+
+.like-share button:hover{
+    animation: my-transition 2s;
+    border: 1.5px solid goldenrod;
+    color: goldenrod;
+}
+
+/* Trang Themes */
+.container-fluid{
+    display: flex;
+}
+/*Adding background image to each section*/
+.one{
+    background: url(img/themes-img/themes-moc-chau.jpg);
+    border: 1px rgba(0,0,0,0) solid;
+    border-radius: 50px;
+}
+.two{
+    background: url(img/themes-img/themes-phu-quoc.jpg);
+    border: 1px rgba(0,0,0,0) solid;
+    border-radius: 50px;
+}
+.three{
+    background: url(img/themes-img/themes-hoi-an.jpg);
+    border: 1px rgba(0,0,0,0) solid;
+    border-radius: 50px;
+}
+.four{
+    background: url(img/themes-img/themes-vinh-ha-long.jpg);
+    border: 1px rgba(0,0,0,0) solid;
+    border-radius: 50px;
+}
+/* Background properties and transition effect to section  */
+.section{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-fit: contain;
+    height: 88vh;
+    cursor: pointer;
+    flex: 0.2;
+    margin:8px;
+    position: relative;
+    transition: all 1.1s ease-in;
+} 
+/* section with active class will grow flex to 3 times  */
+.section.active{
+    flex: 3;
+}
+
+.section.active .section--content{
+    display: block;
+}
+
+/* Scroll */
+html{
+    scroll-behavior: smooth;
+    transition: all 5s ease; 
+}
+
+.section--content{
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    display: none;
+}
+
+.section--content .btn-outline-secondary:hover{
+    animation: my-transition 2s;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+    border: 0px;
+}
+
+.section--content .description .keyword{
+    font-family: 'Playfair Display', serif; 
+    font-size: 38px;
+}
+
+.themes-section{
+    margin: 100px auto;
+}
+
+.beach--heading,
+.oldtown--heading,
+.island--heading,
+.moutain--heading{
+    margin: 20px 0 30px 0;
+    font-weight: 500;
+}
+
+.beach--item,
+.oldtown--item,
+.island--item,
+.moutain--item{
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.beach--item img,
+.oldtown--item img,
+.island--item img,
+.moutain--item img{
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+}
+
+.beach--content__heading,
+.oldtown--content__heading,
+.island--content__heading,
+.moutain--content__heading{
+    color: #fff;
+    font-size: 20px;
+    position: absolute;
+    left: 35px;
+    bottom: -5px;
+    letter-spacing: 1px;
+}
+
+.btn--view__beach,
+.btn--view__oldtown,
+.btn--view__island,
+.btn--view__moutain{
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, .9);
+    color: white;
+    font-size: 15px;
+    position: absolute;
+    left: calc(50% - 75px);
+    top: calc(50% - 30px);
+    width: 150px;
+    height: 60px;
+    display: none;
+}
+
+.beach--item:hover .btn--view__beach,
+.oldtown--item:hover .btn--view__oldtown,
+.island--item:hover .btn--view__island,
+.moutain--item:hover .btn--view__moutain{
+    display: block;
+}
+
+.btn--view__beach:hover,
+.btn--view__oldtown:hover,
+.btn--view__island:hover,
+.btn--view__moutain:hover{
+    animation: my-transition 1s;
+    background-color: rgba(0, 0, 0, .7);
+    color: white;
+}
+
+/* Subpage Themes */
+.themepage{
+    width: 80%;
+    margin: 100px auto;
+}
+
+.themepage img{
+    width: 80%;
+    height: auto;
+    margin: 20px auto;
+}
+
+.themepage--title{
+    margin: 30px auto;
+}
+
+.themepage h6{
+    font-weight: bold;
+    letter-spacing: 0.5px;
+}
+
+.like-share{
+    margin: 20px 0;
+}
+
+.like-share button{
+    margin: 0px 10px;
+    padding: 10px;
+    border: 1.5px solid goldenrod;
+    width: 120px;
+    height: 50px;
+    color: goldenrod;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: 15px;
+    border-radius: 10px;
+}
+
+.like-share button:hover{
+    animation: my-transition 2s;
 }
