--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -1410,7 +1410,7 @@ blockquote p{
     flex: 0.2;
     margin:8px;
     position: relative;
-    transition: all 1.1s ease-in;
+    transition: all ease-in 1.1s;
 } 
 /* section with active class will grow flex to 3 times  */
 .section.active{
@@ -1573,6 +1573,14 @@ html{
     padding: 0;
 }
 
+.offcanvas{
+    width: 370px;
+    height: 70vh;
+    border-radius: 20px;
+    margin-top: 30vh;
+    margin-right: 17px;
+}
+
 .btn-boxchat{
     position:fixed; 
     width:60px; 
@@ -1584,6 +1592,14 @@ html{
     bottom: 2%; 
     right: 2%; 
     cursor: pointer;
+}
+
+.btn-boxchat i{
+    font-size: 28px; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%,-50%);
 }
 
 .btn-boxchat:hover{
@@ -1631,7 +1647,14 @@ html{
 
 .offcanvas-body{
     width: 100%;
+    max-height: 385px;
     padding: 0px;
+    overflow-x: hidden;
+    overflow-y: croll;
+}
+
+.offcanvas-body::-webkit-scrollbar{
+    display: none;
 }
 
 .boxchat-body{
@@ -1709,4 +1732,151 @@ html{
 
 .boxchat-input i:hover{
     opacity: .7;
+}
+
+/* Comment box */
+.box-comment{
+    background-color: #f2f2f2; 
+    display: block; 
+    width: 60%; 
+    height: 600px; 
+    margin: 50px auto; 
+    border-radius: 10px;
+}
+
+.input-comment{
+    width: 80%;
+    max-height: 130px;
+    margin: 20px auto;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid goldenrod ;
+}
+
+.input-comment img{
+    width: 75px;
+    height: 75px;
+    border-radius: 10px;
+    margin: auto 10px;
+}
+
+.input-comment textarea{
+    width: 90%;
+    height: auto;
+    border: 0px;
+    border-radius: 20px;
+    padding: 15px;
+    resize: none;
+}
+
+.input-comment textarea:focus{
+    outline: none;
+}
+
+.box-other-comment{
+    overflow-y: scroll;
+    height: 430px;
+}
+
+.other-comment{
+    width: 80%;
+    margin: 0px auto;
+    padding: 5px;
+    display: flex;
+}
+
+.other-comment img{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin: auto 10px;
+}
+
+.other-comment div{
+    text-align: left;
+    background-color: aquamarine;
+    padding: 0 10px;
+    border-radius: 20px;
+    margin: auto 2px;
+}
+
+.other-comment div > h5{
+    letter-spacing: 1px;
+}
+
+.other-comment div > h6{
+    font-size: 16px;
+    letter-spacing: 0px;
+}
+
+.other-comment div:hover{
+    background-color: rgba(127, 255, 212, .7);
+}
+
+.other-comment a{
+    margin: auto 2px;
+    color: goldenrod;
+    font-size: 18px;
+}
+
+.other-comment a:hover{
+    color: goldenrod;
+    opacity: .7;
+    animation: my-transition 1s;
+}
+
+.box-reply-comment{
+    width: 70%;
+    overflow-y: scroll;
+    height: 130px;
+    float: right;
+    border-left: 1px solid goldenrod;
+    margin: 10px auto;
+}
+
+.reply-comment{
+    margin: 0px auto;
+    padding: 5px;
+    display: flex;
+}
+
+.reply-comment img{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin: auto 10px;
+}
+
+.reply-comment div{
+    text-align: left;
+    background-color: aquamarine;
+    padding: 0 10px;
+    border-radius: 20px;
+    margin: auto 2px;
+}
+
+.reply-comment div > h5{
+    letter-spacing: 1px;
+}
+
+.reply-comment div > h6{
+    font-size: 16px;
+    letter-spacing: 0px;
+}
+
+.reply-comment div:hover{
+    background-color: rgba(127, 255, 212, .7);
+}
+
+.reply-comment a{
+    margin: auto 2px;
+    color: goldenrod;
+    font-size: 18px;
+}
+
+.reply-comment a:hover{
+    color: goldenrod;
+    opacity: .7;
+    animation: my-transition 1s;
 }
