--- a/Project/mystyle.css
+++ b/Project/mystyle.css
@@ -810,7 +810,8 @@ footer .copyright{
 }
 
 .modal-content{
-    border: none;
+    border: 0px;
+    border-radius: 20px;
 }
 
 .modal-header{
@@ -914,7 +915,7 @@ footer .copyright{
 
 .modal-footer .modal-footer-contact button{
     width: auto;
-    border-radius: 5px;
+    border-radius: 10px;
     background: goldenrod;
     font-size: 14px;
     padding: 10px;
@@ -927,7 +928,7 @@ footer .copyright{
 
 .modal-footer .modal-footer-signup button{
     width: auto;
-    border-radius: 5px;
+    border-radius: 10px;
     background: goldenrod;
     font-size: 14px;
     padding: 10px;
@@ -940,7 +941,7 @@ footer .copyright{
 
 .modal-footer .modal-footer-login button{
     width: auto;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: goldenrod;
     font-size: 14px;
     padding: 10px;
@@ -953,10 +954,12 @@ footer .copyright{
 
 .modal-footer .modal-footer-signup button:hover{
     opacity: 0.7;
+    animation: my-transition 1s;
 }
 
 .modal-footer .modal-footer-login button:hover{
     opacity: 0.7;
+    animation: my-transition 1s;
 }
 
 .social-network-icon{
@@ -1291,6 +1294,24 @@ a:hover{
     opacity: 0.8;
 }
 
+.newpost-box{
+    margin-top: 50px;
+}
+
+.btn-newpost{
+    margin: 10px 0;
+    border: 0px;
+    border-radius: 15px;
+    background-color: goldenrod;
+    color: white;
+}
+
+.btn-newpost:hover{
+    animation: my-transition 1s;
+    background-color: rgba(218, 165, 32, .8);
+    color: white;
+}
+
 /* Subpage Blog */
 .author{
     width: 100%;
@@ -1623,11 +1644,15 @@ html{
 }
 
 .boxchat-heading div{
-    display: block; margin-left: 20px; width: auto; margin: auto 5px;
+    display: block; 
+    margin-left: 20px; 
+    width: auto; 
+    margin: auto 5px;
 }
 
 .boxchat-heading div > h6{
     margin: 0;
+    font-size: 16px;
 }
 
 .boxchat-heading div > h5{
@@ -1643,6 +1668,10 @@ html{
 
 .boxchat-heading h5{
     margin: auto;
+}
+
+.boxchat-heading .btn-close{
+    margin: 0;
 }
 
 .offcanvas-body{
@@ -1722,6 +1751,7 @@ html{
     height: 40px;
     border-radius: 20px;
     border: 0;
+    outline: none;
 }
 
 .boxchat-input i{
@@ -1828,8 +1858,7 @@ html{
 
 .box-reply-comment{
     width: 70%;
-    overflow-y: scroll;
-    height: 130px;
+    height: auto;
     float: right;
     border-left: 1px solid goldenrod;
     margin: 10px auto;
@@ -1879,4 +1908,44 @@ html{
     color: goldenrod;
     opacity: .7;
     animation: my-transition 1s;
+}
+
+/* Trang New post */
+.newpost-form{
+    margin-top: 50px;
+    width: 50%;
+    border-radius: 20px;
+    background-color: aquamarine;
+    padding: 20px;
+}
+
+.newpost-form h2{
+    font-weight: bold;
+}
+
+.newpost-form input{
+    width: 100%;
+    height: 50px;
+    margin: 10px auto;
+    border-radius: 10px;
+    border: 0px;
+    outline: none;
+    padding: 0 10px;
+}
+
+.newpost-form input ~ .newpost-content{
+    height: 150px;
+}
+
+.newpost-form .newpost-review{
+    width: 100%;
+    height: 300px;
+    border: 0px;
+    border-radius: 10px;
+    background-color: white;
+    margin: 10px 0;
+}
+
+.newpost-form-line{
+    margin: 20px 0 50px 0;
 }
