--- a/Project/templates/Subpage-themes.html
+++ b/Project/templates/Subpage-themes.html
@@ -292,13 +292,14 @@
                         <form>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label" style="font-weight: bold;">Write your feedback:</label>
-                            <textarea class="form-control" id="message-text" rows="7" placeholder="Phản hồi của bạn..."></textarea>
+                            <textarea class="form-control" id="message-text" rows="10" placeholder="Phản hồi của bạn..."></textarea>
                         </div>
                         </form>
                     </div>
                     <div class="modal-footer" style="display: inline-block; text-align: right;">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Send feedback</button>
+                        <div class="modal-footer-contact">
+                            <button type="button" class="btn btn-primary">Send feedback</button>
+                        </div>
                     </div>
                 </div>
             </div>
